# dirvish

./: README  README.md
dirvish_1_2/: CHANGELOG  TODO.html  dirvish-expire.pl  dirvish-locate.pl  loadconfig.pl
dirvish_1_2_1/: RELEASE.html  TODO.html  dirvish-expire.pl  dirvish-runall.pl  dirvish.pl  install.sh
dirvish_1_2_1_ems/: FAQ.html  INSTALL  dirvish-expire.pl  dirvish-locate.pl  dirvish-runall.pl  dirvish.conf.5  dirvish.pl
dirvish_1_3_1/: Build.PL  CHANGELOG  COPYING  CREDITS  DirvishHack.pm  FAQ.pod  INSTALL.pod  Makefile.PL  README  RELEASE.pod  TODO.pod  debian.howto.pod  dirvish  dirvish-expire  dirvish-expire.PL  dirvish-expire.pod  dirvish-locate  dirvish-locate.PL  dirvish-locate.pod  dirvish-runall  dirvish-runall.PL  dirvish-runall.pod  dirvish.PL  dirvish.conf.pod  dirvish.pod  dirvishlib.pl  dirvishlib.pm  uninstall
dirvish_1_3_ds/: Build.PL  Dirvish.pm  DirvishHack.pm  INSTALL.pod  Makefile  Makefile.PL  TODO.pod  dirvish-expire  dirvish-expire.pl  dirvish-locate  dirvish-locate.pl  dirvish-restore.pl  dirvish-runall.pl  (+3 more)
dirvish_1_3_esm/: AUTHORS  Build  Build.PL  FAQ.html  INSTALL  Makefile  Makefile.am  Makefile.in  README  RELEASE.html  config.status  configure  configure.in  dirvish  dirvish-expire  dirvish-locate  dirvish-runall
dirvish_1_3_esm/_build/: build_params  prereqs
dirvish_1_3_esm/_build/lib/Dirvish/: Build.pm
dirvish_1_3_esm/autom4te.cache/: output.0  requests  traces.0  traces.1
dirvish_1_3_esm/blib/lib/Dirvish/: loadconfig.pm
dirvish_1_3_esm/blib/script/: dirvish  dirvish-expire  dirvish-locate  dirvish-runall
(+69 files in other folders)
