#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.59)
AC_INIT(dirvish, [1.3.0-esm], [dirvish@dirvish.org])
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(dirvish, 1.3.0-esm)
AC_PATH_PROG(PERL, perl)
AC_PATH_PROG(RSYNC, rsync)
AC_PATH_PROG(SSH, ssh)

# Checks for programs.
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_OUTPUT([Makefile])

temp_mandir=`eval echo $mandir` ; temp_mandir=`eval echo $temp_mandir`

# Generate the Perl build file
#AC_MSG_CHECKING(able to build using Perl Module::Build)
#if `perl ./Build.PL installdirs='1>/dev/null 2>&1`;
#then
#	AC_MSG_RESULT(yes)
#	module_build=yes
#else
#	AC_MSG_RESULT(no)
#	module_build=no
#fi

echo ""
echo "Configuration summary:"
echo "======================"
echo "  Host type................: $target"
echo "  Perl.....................: $PERL"
echo "  Package..................: $PACKAGE_NAME"
echo "  Version..................: $VERSION"
echo ""
echo "  Installation prefix......: $prefix"
echo "  man directory............: $temp_mandir"
echo ""
#echo "If this summary looks good, type './Build install' "
#echo "to install the programs to the above installation prefix."
